<resources>
    <string name="app_name">My Application</string>
    <string name="signup">signup</string>
    <string name="donthaveanaccount">Dont have an account</string>
    <string name="login">Login</string>
    <string name="forgotpassword">Fotgot your password</string>
    <string name="enteryourpassword">Enter your password</string>
    <string name="enteryourid">Enter your id</string>
    <string name="Welcometoapp">Welcome to snapagram</string>
    <string name="signupforapp">Signup for snapagram</string>
    <string name="enteryourname">Enter your name</string>
    <string name="setapasswrd">Set up a password</string>
    <string name="Signupbutton">Signup and start using</string>
    <string name="snapagramwelcomesyou">Snapagram Welcomes You</string>
    <string name="haveanacc">Already have an account</string>
    <string name="userprofile">My profile</string>
    <string name="settings">Settings</string>
    <string name="sample5">Sample5</string>
    <string name="Sample4">Sample4</string>
    <string name="Sample3">Sample3</string>
    <string name="Sample2">Sample2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="cityname">Singapore</string>
    <string name="camsettings">Camera settings</string>
    <string name="camname">Camera</string>
    <string name="cameraedit">Add camera name</string>
    <string name="camerasettings">Add cam settings</string>
    <string name="firstinput">Enter value</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="subval">Subtract values</string>
    <string name="addval">Add values</string>
    <string name="mulval">Multiply values</string>
    <string name="divval">Divide values</string>
    <string name="secondinput">Enter value</string>
    <string name="Resultcalc">0000</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="userId">User ID</string>
    <string name="userPss">Password</string>
    <string name="Printeredfrag">Print me</string>
    <string name="save">Save</string>
    <string name="colorBlack">Black</string>
    <string name="PrintReverse">Reverse save</string>
    <string name="firstfragtransfer">1st Frag Transfer</string>
    <string name="uibtn1">Go  Back  To \nHome Page</string>
    <string name="dob">Dob</string>
    <string name="name">Name</string>
    <string name="Mobile">Mobile</string>
    <string name="Email">Email</string>
    <string name="address">Address</string>
    <string name="userid">hehesharma@hehehehe.com</string>
    <string name="number">1234567890</string>
    <string name="dobDate">00-00-0000</string>
    <string name="addressInput">vill 0000 \n state 0000 \n P.O-0000</string>
    <string name="btnNavOne">Login</string>
    <string name="btnNavTwo">Signup</string>
    <string name="hello_blank_fragment">swagat hai</string>
    <string name="etUsrName">Setup a username</string>
    <string name="setId">Set an email id</string>
    <string name="setPss">Set up a password</string>
    <string name="etUsrEmail">Set up an email</string>
    <string name="forgotPassword">Forgot your password </string>
    <string name="otp">Enter Otp</string>
    <string name="sendOtp">Send otp to email</string>
    <string name="dialogOne">1st Dialog</string>
    <string name="Dialog">Dialog</string>
    <string name="zero">set 0</string>
    <string name="AlertDialog">Alert Dialog</string>
    <string name="addData">Add data</string>
    <string name="etName">Enter name</string>
    <string name="update">Update</string>
    <string name="etData">Enter data</string>
    <string name="cont">Contact number</string>
    <string name="rlno">Roll no</string>
    <string name="costumerdata">Costumer Data</string>
    <string name="StockHomepage">Manage your stock here</string>
    <string name="OrderHistoryWelcome">Manage your order history here</string>
    <string name="orderHistory">Order History</string>
    <string name="Stockmanage">Stock manager</string>
    <string name="enterNumberValue">Enter Number Value</string>
    <string name="Itemname">Item name</string>
    <string name="Itemprice">Item Price</string>
    <string name="Itemquantity">Item Quantity</string>
    <string name="ItemQuantity">Item Quantity</string>
    <string name="inputData">Input Data</string>
    <string name="pincode">Add Pincode</string>
    <string name="odval">"Add avg Order Value "</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_contact">Enter Contact No.</string>
    <string name="enter_address">Enter Address</string>
    <string name="avgOrderValue">Avg Order Value</string>
</resources>