<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignupActivity">

   <TextView

       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/signupforapp"
       />
    <EditText
        android:inputType="textPersonName"
        android:id="@+id/sgnup_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enteryourname"
       />
    <EditText
        android:inputType="textPassword"
        android:id="@+id/sgnup_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setapasswrd"
        />
        <Button
            android:id="@+id/btnsignup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Signupbutton"
            />
<TextView
    android:id="@+id/haveanacc"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/haveanacc"
/>
</LinearLayout>