<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:gravity="center"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity"> 


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcometoapp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/entrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enteryourid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:inputType="textPassword"
        android:id="@+id/entrpss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enteryourpassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/forgotpassword"
        />


    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:text="@string/login"
        android:layout_height="wrap_content"
     />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

       android:text="@string/donthaveanaccount"
        />
    <TextView
        android:layout_marginStart="2pt"
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/signup"
        />

</LinearLayout>
</LinearLayout>
