<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator"
    android:background="@color/black">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/calcgdline1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/calcgdline2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".8"
        />
    <EditText
        android:id="@+id/value1"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/firstinput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toTopOf="@id/value2"
        app:layout_constraintVertical_chainStyle="spread"
        />
    <EditText
        android:id="@+id/value2"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/secondinput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/value1"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="@id/calcgdline1"

        />
<androidx.constraintlayout.widget.Barrier
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:barrierDirection="bottom"
    app:constraint_referenced_ids="value2"/>

    <Button
        android:id="@+id/buttonadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:backgroundTint="@color/black"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/calcgdline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttondivide"
        app:layout_constraintEnd_toStartOf="@id/buttonmultiply"
        android:tooltipText="@string/addval"
        />

    <Button
        android:id="@+id/buttonmultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:textSize="30sp"
        android:text="@string/multiply"
        app:layout_constraintTop_toBottomOf="@id/calcgdline1"
        app:layout_constraintStart_toEndOf="@id/buttonadd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonminus"
        android:tooltipText="@string/mulval"
        />
    <Button
        android:id="@+id/buttondivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:textSize="30sp"
        android:text="@string/divide"
        app:layout_constraintBottom_toBottomOf="@id/calcgdline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonminus"
        app:layout_constraintTop_toBottomOf="@id/buttonadd"
        android:tooltipText="@string/divval"
    />
    <Button
        android:id="@+id/buttonminus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:textSize="30sp"
        android:text="@string/subtract"
        app:layout_constraintBottom_toBottomOf="@id/calcgdline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttondivide"
        app:layout_constraintTop_toBottomOf="@id/buttonmultiply"
        android:tooltipText="@string/subval"
        />
    <TextView
        android:id="@+id/resultcalc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calcgdline2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"
         />
</androidx.constraintlayout.widget.ConstraintLayout>