<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/rvName"
        android:inputType="text"
        />
    <TextView
        android:inputType="number"
        android:id="@+id/rvRoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rlno"
        />
    <TextView
        android:inputType="number"
    android:text="@string/cont"
    android:id="@+id/rvCont"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />
</LinearLayout>