<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavSecondFragment"
    android:gravity="center"
    android:orientation="vertical"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupforapp" />

    <EditText
        android:id="@+id/etUnmSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etUsrName"
        android:inputType="textPersonName"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginHorizontal="30sp"
        android:layout_marginVertical="10sp"
        />

    <EditText
        android:id="@+id/etEmlSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etUsrEmail"
        android:inputType="textEmailAddress"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginHorizontal="30sp"
        android:layout_marginVertical="10sp"
        />

    <EditText
        android:id="@+id/etPssSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setPss"
        android:inputType="numberPassword"
        android:background="@color/red"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginHorizontal="30sp"
        android:layout_marginVertical="10sp"
        />
    <Button
        android:id="@+id/btnSignNav2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:backgroundTint="@color/material_dynamic_neutral10"
/>

</LinearLayout>