<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:id="@+id/tvCostName"
        android:inputType="text"
        android:layout_gravity="center"

        />
    <TextView
        android:textColor="@color/white"
        android:inputType="number"
        android:text="@string/cont"
        android:id="@+id/tvCostCont"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />
    <TextView
        android:textSize="20sp"
        android:textColor="@color/white"
        android:inputType="number"
        android:id="@+id/tvCostPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/pincode"
        />
    <TextView
        android:textColor="@color/white"
        android:textSize="20sp"
        android:inputType="number"
        android:id="@+id/tvCostOV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/odval"
        android:layout_gravity="center"/>
</LinearLayout>