<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FirstFragment">

    <Button
        android:id="@+id/fragButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/colorBlack"

        />


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_fragment_label"
        android:textColorHint="@color/red"
        android:textColor="@color/red"
        android:gravity="center"
        />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        />
</LinearLayout>