<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <EditText
        android:id="@+id/etDataName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etName"
 />
    <EditText
        android:id="@+id/etDataCont"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/etData"
        />
    <EditText
        android:id="@+id/etDataRlNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/etData"
        />
    <Button
        android:id="@+id/btnAddData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addData"/>
</LinearLayout>