<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/image1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:scaleType="fitXY"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3"

        />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="-30dp"
        android:background="@color/white"
        android:src="@drawable/star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image1" />

    <TextView
        android:id="@+id/cityname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cityname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image1" />

    <TextView
        android:id="@+id/camname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/mrbarrier2"
        app:layout_constraintVertical_bias=".3" />

    <TextView
        android:id="@+id/camsettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camsettings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mrbarrier2"
        app:layout_constraintVertical_bias="0.03"

      />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/mrbarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="camsettings" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/mrbarrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="camname" />
    <EditText
        android:id="@+id/editcameraname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cameraedit"
        app:layout_constraintStart_toStartOf="@id/mrbarrier"
        app:layout_constraintBottom_toTopOf="@id/mrbarrier2"
        app:layout_constraintTop_toTopOf="@id/camname"
        />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camerasettings"

        app:layout_constraintStart_toStartOf="@id/mrbarrier"
        app:layout_constraintTop_toBottomOf="@id/mrbarrier2"

         />

</androidx.constraintlayout.widget.ConstraintLayout>